--- a/Products/Products.WebApi/Web.config
+++ b/Products/Products.WebApi/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProductsDBEntities" connectionString="metadata=res://*/Models.csdl|res://*/Models.ssdl|res://*/Models.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=ProductsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProductsDBModels" connectionString="metadata=res://*/ProductsDBModels.csdl|res://*/ProductsDBModels.ssdl|res://*/ProductsDBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=ProductsDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
