--- a/Products.Client/Products.Client/Products.Client.csproj
+++ b/Products.Client/Products.Client/Products.Client.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="scripts\http-module.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
