--- a/Products.Client/Products.Client/Products.Client.csproj
+++ b/Products.Client/Products.Client/Products.Client.csproj
@@ -69,6 +69,7 @@
     <Content Include="scripts\http-module.js" />
     <Content Include="views\category-update.html" />
     <Content Include="views\product-update.html" />
+    <Content Include="views\product-view.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
