Fix file not sent from the client. Fix exception when parse file extension.

--- a/Products.Server/Products.WebApi/Products.WebApi.csproj
+++ b/Products.Server/Products.WebApi/Products.WebApi.csproj
@@ -171,7 +171,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Koala.jpg" />
+    <Content Include="App_Data\canada.jpg" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
