Refresh image during and after upload. Use ProductSummaryModel in GET all products.

--- a/Products.Server/Products.WebApi/Products.WebApi.csproj
+++ b/Products.Server/Products.WebApi/Products.WebApi.csproj
@@ -168,6 +168,7 @@
     </Compile>
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\ProductSummaryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
